--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: java
 
-# Test several JDK
-jdk:
-  - openjdk8
+before_deploy:
+  - mvn help:evaluate -N -Dexpression=project.version|grep -v '\['
+  - export project_version=$(mvn help:evaluate -N -Dexpression=project.version|grep -v '\[')
 
-# Remove all the bla-bla...
+ ## export GPG details
+ before_install:
+     - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+     - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+
+install:
+   mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+
+## Build and release to maven central
 script:
-  - mvn clean install -q
-
+   mvn clean deploy --settings .maven.xml -DskipTests=true -B -U -Prelease
 
