--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,9 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+
                         <configuration>
+                            <failOnError>false</failOnError>
                             <additionalparam>${javadoc.opts}</additionalparam>
                         </configuration>
                     </execution>
