--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
 
 ## Build and release to maven central
 script:
-   mvn clean deploy --settings .maven.xml -DskipTests=true -B -U -Prelease
+   mvn clean deploy --settings .maven.xml -DskipTests=true -Dadditionalparam=-Xdoclint:none -Dmaven.javadoc.skip=true -B -U -Prelease
 
