--- a/spring-boot-starter-flog/pom.xml
+++ b/spring-boot-starter-flog/pom.xml
@@ -46,6 +46,7 @@
             <groupId>com.wf2311</groupId>
             <artifactId>flog</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
