--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,17 @@ cache:
   directories:
   - '$HOME/.m2/repository'
 before_deploy:
-- mvn help:evaluate -N -Dexpression=project.version|grep -v '\['
-- export project_version=$(mvn help:evaluate -N -Dexpression=project.version|grep
-  -v '\[')
+  - mvn help:evaluate -N -Dexpression=project.version|grep -v '\['
+  - export project_version=$(mvn help:evaluate -N -Dexpression=project.version|grep -v '\[')
 before_install:
-- echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
-- echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
-install: mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dadditionalparam=-Xdoclint:none
-  -Dmaven.javadoc.skip=true -B -V
-script: mvn clean deploy --settings .maven.xml -DskipTests=true -Dadditionalparam=-Xdoclint:none
-  -Dmaven.javadoc.skip=true -B -U -Prelease
+  - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+  - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+install:
+  - mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dadditionalparam=-Xdoclint:none -Dmaven.javadoc.skip=true -B -V
+script:
+  - mvn clean deploy --settings .maven.xml -DskipTests=true -Dadditionalparam=-Xdoclint:none -Dmaven.javadoc.skip=true -B -U -Prelease
 after_success:
-  - cd ./flog-spring-boot-example
+  - cd ./spring-boot-starter-flog
   - mvn clean deploy --settings .maven.xml -DskipTests=true -Dadditionalparam=-Xdoclint:none -Dmaven.javadoc.skip=true -B -U -Prelease
 env:
   global:
