--- a/spring-boot-starter-flog/pom.xml
+++ b/spring-boot-starter-flog/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.wf2311</groupId>
     <artifactId>spring-boot-starter-flog</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <spring-boot.version>1.5.12.RELEASE</spring-boot.version>
     </properties>
