--- a/spring-boot-starter-flog/pom.xml
+++ b/spring-boot-starter-flog/pom.xml
@@ -45,7 +45,7 @@
 
         <dependency>
             <groupId>com.wf2311</groupId>
-            <artifactId>flog</artifactId>
+            <artifactId>flog-spring</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
