--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
             <name>Maven Central Staging Repository</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
+        <downloadUrl>https://oss.sonatype.org/content/groups/public</downloadUrl>
     </distributionManagement>
 
     <properties>
