--- a/spring-boot-starter-flog/pom.xml
+++ b/spring-boot-starter-flog/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>flog</artifactId>
         <groupId>com.wf2311</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>spring-boot-starter-flog</artifactId>
 
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.wf2311</groupId>
             <artifactId>flog-spring</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
